--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cusdis",
+  "name": "comments",
   "scripts": {
     "dev": "DB_TYPE=sqlite npm run dev:general",
     "dev:pg": "DB_TYPE=pgsql npm run dev:general",
